# ia_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  prd-agent-orchestrator.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: document_generator.py
backend/app/api/: admin_settings.py  alerts.py  auth.py  documents.py  git.py  llm_settings.py  preview.py  projects.py  sessions.py  teams.py
backend/app/core/: config.py
backend/app/models/: database.py  document_versions.py  models.py  rbac.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  git_integration.py  llm_factory.py  openhands_monitor.py  openhands_service.py  preview_deployment.py  xai_service.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentHistory.tsx  MarkdownRenderer.tsx  MonacoEditor.tsx  ProjectCard.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/pages/: AdminSettingsPage.tsx  DashboardPage.tsx  GitSettingsPage.tsx  LoginPage.tsx  PreviewPage.tsx  ProjectDetailPage.tsx  TeamPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
